fix: more spacing

--- a/credentials/apps/credentials_theme_openedx/static/sass/_print-rendering.scss
+++ b/credentials/apps/credentials_theme_openedx/static/sass/_print-rendering.scss
@@ -36,7 +36,7 @@
             @include make-col-ready();
             @include make-col(8);
             margin-bottom: 0;
-            margin-top: $spacer * .5;
+            margin-top: calc(var(--pgn-spacing-spacer-base) * .5);
             display: inline-block;
             vertical-align: middle;
           }
@@ -87,7 +87,7 @@
 
         .signatory {
           margin: 0;
-          margin-bottom: $spacer * .5;
+          margin-bottom: calc(var(--pgn-spacing-spacer-base) * .5);
           width: 100%;
           &:last-child {
             margin-bottom: 0;
@@ -165,7 +165,7 @@
     .accomplishment-summary,
     .accomplishment-statement-detail {
       margin: 0;
-      margin-bottom: $spacer * 1.5;
+      margin-bottom: calc(var(--pgn-spacing-spacer-base) * 1.5);
     }
   }
 
